# OpenCosmo

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-bake.hcl  pyproject.toml  release_notes.rst
changes/: +018f30cb.bugfix.rst  +01edcb92.feature.rst  +03cc8f39.feature.rst  +0743f07b.bugfix.rst  +07fe4e9.feature.rst  +0864247d.misc.rst  +09af51ad.feature.rst  +0b35580e.bugfix.rst  +0caae907.feature.rst  +11b9fbcc.removal.rst  +13f94aa2.feature.rst  +15d144c7.bugfix.rst  +16723056.bugfix.rst  +1768b214.bugfix.rst  +18610722.bugfix.rst  +19969705.misc.rst  +1c99f397.bugfix.rst  +1dc23b9a.misc.rst  +20f60b54.feature.rst  +21d9d2f3.improvement.rst  +27998f1c.improvement.rst  +28bb6b3f.bugfix.rst  +2b835aa5.bugfix.rst  +2e1342c8.misc.rst  +31323023.improvement.rst  +32caaee9.improvement.rst  +32ff343e.feature.rst  +342c1e1e.feature.rst  +38b94a7e.bugfix.rst  +3b4c5b0e.feature.rst  +3d26aa64.improvement.rst  +3e00fa4e.improvement.rst  +429b213.bugfix.rst  +43fe3d3e.feature.rst  +471bfb7c.removal.rst  +48b1dfbc.feature.rst  +4baeec26.feature.rst  +4c6edc82.improvement.rst  +50075f56.bugfix.rst  +503fdb2c.misc.rst  (+135 more)
docs/: requirements.txt
opencosmo/: __init__.py  column.py  cosmology.py  dataset.py  file.py  header.py  io.py  mpi.py  utils.py
paper/: paper.md
src/: index.rs  lib.rs
test/: conftest.py  test_cache.py  test_collection.py  test_cosmology.py  test_dataset.py  test_derive.py  test_diffsky.py  test_evaluate_formats.py  test_file.py  test_filters.py  test_formats.py  test_header.py  test_healpixmap.py  (+16 more)
(+347 files in other folders)
