[tool.poetry]
name = "opencosmo"
version = "0.1.0"
description = "OpenCosmo Python Toolkit"
authors = ["Patrick Wells <pwells@anl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
h5py = "^3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
