[tool.poetry]
name = "opencosmo"
version = "0.1.0"
description = "OpenCosmo Python Toolkit"
authors = ["Patrick Wells <pwells@anl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
h5py = "^3.12.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
