[tool.poetry]
name = "opencosmo"
version = "0.1.1"
description = "OpenCosmo Python Toolkit"
authors = ["Patrick Wells <pwells@anl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
h5py = "^3.12.1"
astropy = "^7.0.1"
pydantic = "^2.10.6"
hdf5plugin = "^5.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.develop.dependencies]
ruff = "^0.9.4"
mypy = "^1.14.1"

[tool.poetry.group.develop]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["h5py", "astropy"]
ignore_missing_imports = true
